- Update Settings navigation, add placeholders to fields, auto-update server address with the selected protocol - Set to TLS if transport cannot be defined - Add Title to MenuBar and console info if SystemTray is unavailable - Fix setting icon in qrc for future using - Add old CPACK in CMake

--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -309,27 +309,27 @@ endif ()
 #endif ()
 
 # ==============================================================================
-# CPack.
+#                               CPack.
 # ==============================================================================
 
-#set(CPACK_PACKAGE_NAME "${APPLICATION_NAME}")
-#set(CPACK_PACKAGE_VENDOR "${APPLICATION_VENDOR}")
-#set(CPACK_PACKAGE_VERSION_MAJOR ${LINPHONE_MAJOR_VERSION})
-#set(CPACK_PACKAGE_VERSION_MINOR ${LINPHONE_MINOR_VERSION})
-#if (LINPHONE_MICRO_VERSION)
-#  set(CPACK_PACKAGE_VERSION_PATCH ${LINPHONE_MICRO_VERSION})
-#endif ()
-#set(CPACK_PACKAGE_EXECUTABLES "${EXECUTABLE_NAME};${APPLICATION_NAME}")
-#set(CPACK_PACKAGE_INSTALL_DIRECTORY "${APPLICATION_NAME}")
-#set(CPACK_RESOURCE_FILE_LICENSE "${LINPHONE_DESKTOP_DIR}/LICENSE.txt")
+set(CPACK_PACKAGE_NAME "${APPLICATION_NAME}")
+set(CPACK_PACKAGE_VENDOR "${APPLICATION_VENDOR}")
+set(CPACK_PACKAGE_VERSION_MAJOR ${LINPHONE_MAJOR_VERSION})
+set(CPACK_PACKAGE_VERSION_MINOR ${LINPHONE_MINOR_VERSION})
+if (LINPHONE_MICRO_VERSION)
+  set(CPACK_PACKAGE_VERSION_PATCH ${LINPHONE_MICRO_VERSION})
+endif ()
+set(CPACK_PACKAGE_EXECUTABLES "${EXECUTABLE_NAME};${APPLICATION_NAME}")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "${APPLICATION_NAME}")
+set(CPACK_RESOURCE_FILE_LICENSE "${LINPHONE_DESKTOP_DIR}/LICENSE.txt")
 
-#if (APPLE)
-#  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LINPHONE_GIT_REVISION}-mac")
-#  set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/macos/background_dmg.jpg")
+if (APPLE)
+  set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${LINPHONE_GIT_REVISION}-mac")
+  set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_CURRENT_SOURCE_DIR}/macos/background_dmg.jpg")
 
-#  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/macos/linphone_dmg.scpt.in" "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt" @ONLY)
-#  set(CPACK_DMG_DS_STORE_SETUP_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt")
-#endif ()
+  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/macos/linphone_dmg.scpt.in" "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt" @ONLY)
+  set(CPACK_DMG_DS_STORE_SETUP_SCRIPT "${CMAKE_CURRENT_BINARY_DIR}/linphone_dmg.scpt")
+endif ()
 
 if (WIN32)
   set(CPACK_GENERATOR "NSIS")
