--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -26,19 +26,27 @@
 # Update CMake installation  
     - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_MACOS_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
     - cmake --build . --target linphone-qt -- $ADDITIONAL_BUILD_OPTIONS
-#    - codesign --verbose -s "$MACOS_SIGNING_IDENTITY" WORK/desktop/Build/linphone_package/Linphone-*.dmg
     - cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
     - ccache -s
+
 
   artifacts:
     paths:
       - build-desktop/OUTPUT
     expire_in: 1 week
 
+#################################################
+# On each push
+#################################################
 
+job-macosx-ninja:
+
+  variables:
+    CMAKE_GENERATOR: Ninja
+  extends: .job-macosx-desktop
 
 #################################################
-# Makefile
+# Nightly
 #################################################
 
 
@@ -51,19 +59,10 @@ job-macosx-makefile:
     CMAKE_GENERATOR: Unix Makefiles
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
   extends: .job-macosx-desktop
-
-
-#################################################
-# Ninja
-#################################################
-
-
-job-macosx-ninja:
-
-  variables:
-    CMAKE_GENERATOR: Ninja
-  extends: .job-macosx-desktop
-
+  artifacts:
+    paths:
+      - build-desktop/*
+    expire_in: 1 week
 
 job-macosx-ninja-novideo:
 
@@ -73,11 +72,6 @@ job-macosx-ninja-novideo:
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-macosx-ninja
-
-
-#################################################
-# XCode
-#################################################
 
 
 job-macosx-xcode:
@@ -91,4 +85,45 @@ job-macosx-xcode:
     variables:
       - $NIGHTLY_MASTER
       - $DEPLOY_RUN_MACOSX
+      
 
+#################################################
+# Package - Nightly
+#################################################
+
+
+job-macosx-makefile-package:
+
+  stage: package
+  tags: [ "deploy" ]
+
+  dependencies:
+    - job-macosx-makefile
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+  script:
+    - cd build-desktop
+    - cmake --build . --target package -- $ADDITIONAL_BUILD_OPTIONS
+    - codesign --verbose -s "$MACOS_SIGNING_IDENTITY" CPackBuild/Linphone-*.dmg
+  artifacts:
+    paths:
+      - build-desktop/CPackBuild/Linphone*.dmg
+    expire_in: 1 week
+
+#################################################
+# Deploy - Nightly
+#################################################
+
+job-macosx-ninja-deploy:
+
+  stage: deploy
+  tags: [ "deploy" ]
+
+  dependencies:
+    - job-macosx-makefile-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+  script:
+    - scp build-desktop/CPackBuild/Linphone*.dmg $DEPLOY_SERVER:$MACOSX_UPLOAD_DIRECTORY/linphone
