Update Build installation for Windows Set to optional for images when ENABLE_VIDEO=NO is specified

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,12 @@ else()
         add_subdirectory(submodules/externals/minizip "submodules/externals/minizip/build-minizip")
     else()
         set(CMAKE_INSTALL_PREFIX "${APPLICATION_OUTPUT_DIR}")
+        if(WIN32)
+            set(EXECUTABLE_OUTPUT_DIR "${CMAKE_BINARY_DIR}")
+            set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${EXECUTABLE_OUTPUT_DIR}")
+            set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${EXECUTABLE_OUTPUT_DIR}")
+            set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${EXECUTABLE_OUTPUT_DIR}")
+		endif()
         message("MINIZIP : ${MINIZIP_INCLUDE_DIRS} => ${MINIZIP_LIBRARIES}")
         message("INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} FRAMEWORK_PATH=${CMAKE_FRAMEWORK_PATH}")
         message("LINPHONE : ${LINPHONE_INCLUDE_DIRS} => ${LINPHONE_LIBRARIES}")
