--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -1,6 +1,6 @@
 job-centos7-makefile-gcc:
 
-  tags: [ "docker-centos7" ]
+  tags: [ "docker" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
   only:
     variables:
@@ -12,18 +12,18 @@ job-centos7-makefile-gcc:
   extends: .job-linux-desktop
 
 
-job-centos7-makefile-clang:
+#job-centos7-makefile-clang:
 
-  tags: [ "docker-centos7" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  variables:
-    CMAKE_GENERATOR: Unix Makefiles
-    CC: clang
-    CXX: clang++
-  extends: .job-linux-desktop
+#  tags: [ "docker-centos7" ]
+#  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
+#  only:
+#    variables:
+#      - $NIGHTLY_MASTER
+#  variables:
+#    CMAKE_GENERATOR: Unix Makefiles
+#    CC: clang
+#    CXX: clang++
+#  extends: .job-linux-desktop
 
 
 #################################################
@@ -33,7 +33,7 @@ job-centos7-makefile-clang:
 
 job-centos7-ninja-gcc:
 
-  tags: [ "docker-centos7" ]
+  tags: [ "docker" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
   variables:
     CMAKE_GENERATOR: Ninja
@@ -42,39 +42,17 @@ job-centos7-ninja-gcc:
   extends: .job-linux-desktop
 
 
-job-centos7-ninja-gcc-novideo:
+#job-centos7-ninja-clang:
 
-  tags: [ "docker-centos7" ]
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  variables:
-    CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-  extends: job-centos7-ninja-gcc
-
-
-job-centos7-ninja-clang:
-
-  tags: [ "docker-centos7" ]
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
-  variables:
-    CMAKE_GENERATOR: Ninja
-    CC: clang
-    CXX: clang++
-    CMAKE_OPTIONS: -DENABLE_LIME=ON
-  extends: .job-linux-desktop
-
-
-job-centos7-ninja-clang-novideo:
-
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  variables:
-    CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-  extends: job-centos7-ninja-clang
-
+#  tags: [ "docker-centos7" ]
+#  only:
+#    variables:
+#      - $NIGHTLY_MASTER
+#  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
+#  variables:
+#    CMAKE_GENERATOR: Ninja
+#    CC: clang
+#    CXX: clang++
+#    CMAKE_OPTIONS: -DENABLE_LIME=ON
+#  extends: .job-linux-desktop
 
