--- a/cmake_builder/linphone_package/CMakeLists.txt
+++ b/cmake_builder/linphone_package/CMakeLists.txt
@@ -102,7 +102,7 @@ endif ()
 if (WIN32)
   find_program(DEPLOYQT_PROGRAM windeployqt)
   if (NOT DEPLOYQT_PROGRAM)
-    message(FATAL_ERROR "Could not find the macdeployqt program. Make sure it is in the PATH.")
+    message(FATAL_ERROR "Could not find the windeployqt program. Make sure it is in the PATH.")
   endif ()
   file(GLOB LIB_FILES "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/*.dll")
   install(FILES ${LIB_FILES} DESTINATION "${CMAKE_INSTALL_BINDIR}/")
