--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -1,3 +1,8 @@
+#Build template to use in other job scripts without having to copy same code
+#format = .className: &referenceName | scripts
+#Use = scripts: -*referenceName
+#Example : see .job-macosx-desktop for the default script and job-macosx-makefile-package for override
+
 .build_all_script: &build_all_script |
   ccache -s
   export Qt5_DIR=/usr/local/opt/qt/lib/cmake
@@ -13,14 +18,14 @@
   cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_MACOS_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
   cmake --build . --target all $LBC_NODEBUG_OPTIONS
   # Minizip install to OUTPUT folder
-   cmake ..
-   cmake --build . --target minizip
-   cmake --build . --target install
+  cmake ..
+  cmake --build . --target minizip
+  cmake --build . --target install
   # Update CMake installation
-   cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_MACOS_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
-   cmake --build . --target linphone-qt -- $ADDITIONAL_BUILD_OPTIONS
-   cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
-   ccache -s
+  cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_MACOS_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
+  cmake --build . --target linphone-qt -- $ADDITIONAL_BUILD_OPTIONS
+  cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
+  ccache -s
 
 .job-macosx-desktop:
   stage: build
@@ -49,7 +54,6 @@ job-macosx-makefile:
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $TEST_NIGHTLY
   variables:
     CMAKE_GENERATOR: Unix Makefiles
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
@@ -87,7 +91,6 @@ job-macosx-makefile-package:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $TEST_NIGHTLY
   extends: job-macosx-makefile
   script:
     - *build_all_script
@@ -110,6 +113,5 @@ job-macosx-makefile-deploy:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $TEST_NIGHTLY
   script:
     - scp build-desktop/CPackBuild/Linphone*.dmg $DEPLOY_SERVER:$MACOSX_UPLOAD_DIRECTORY/app/
