Update CI : remove empty export, set to sdk target on building

--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -12,7 +12,6 @@
     - export CC=$CC
     - export CXX=$CXX
     - mkdir -p build-desktop/OUTPUT
-    - export 
     - echo $CMAKE_GENERATOR
     - echo $DEFAULT_LINUX_CMAKE_OPTIONS
     - echo $CMAKE_OPTIONS
@@ -20,7 +19,7 @@
 # SDK Building
     - cd build-desktop
     - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_VERBOSE_MAKEFILE=ON -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_LINUX_CMAKE_OPTIONS $CMAKE_OPTIONS $SCHEDULE_CMAKE_OPTIONS $CMAKE_SANITIZER_OPTIONS 
-    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+    - cmake --build . --target sdk $LBC_NODEBUG_OPTIONS
 # Minizip install to OUTPUT folder
     - cmake ..
     - cmake --build . --target minizip $LBC_NODEBUG_OPTIONS
